--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,11 +14,6 @@ collections:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
-      - {
-          name: image,
-          label: Image,
-          widget: image,
-          default: "src/svg/undraw_events.svg",
-        }
+      - { name: image, label: Image, widget: image, required: false }
       - { name: body, label: Body, widget: markdown }
       - { name: draft, label: Draft, widget: boolean, default: false }
