--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Doug McDonald <dougajmcdonald@gmail.com>",
   "dependencies": {
     "gatsby": "^2.18.17",
+    "gatsby-cli": "^2.10.2",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-feed": "^2.3.21",
     "gatsby-plugin-google-analytics": "^2.1.29",
