--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,13 @@ collections:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
+      - {
+          name: category,
+          label: Category,
+          widget: "select",
+          options: ["events", "news"],
+          default: ["events"],
+        }
       - { name: image, label: Image, widget: image, required: false }
       - { name: body, label: Body, widget: markdown }
       - { name: draft, label: Draft, widget: boolean, default: false }
